# python-beginner

./: README.md  pyproject.toml
examples/: basics.py
pyanalytics/: task1.py  task2_aapl_googl_analysis.ipynb
tests/: test_task1.py
